<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="259dp"
        android:layout_marginRight="259dp"
        android:layout_marginBottom="592dp"
        android:enabled="true"
        android:hint="@string/txtNome"
        android:text="@string/txtNome"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRg"
        android:layout_width="92dp"
        android:layout_height="24dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="274dp"
        android:layout_marginRight="274dp"
        android:layout_marginBottom="535dp"
        android:hint="@string/txtRg"
        android:text="@string/txtRg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDatanasc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:layout_marginBottom="480dp"
        android:enabled="true"
        android:hint="@string/txtDatanasc"
        android:text="@string/txtDatanasc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="423dp"
        android:text="@string/txtPag"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="206dp"
        android:layout_height="38dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="583dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rg"
        android:layout_width="215dp"
        android:layout_height="44dp"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="527dp"
        android:ems="10"
        android:hint="@string/rg"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/data"
        android:layout_width="183dp"
        android:layout_height="45dp"
        android:layout_marginStart="186dp"
        android:layout_marginLeft="186dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="472dp"
        android:ems="10"
        android:hint="@string/data"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="644dp"
        android:text="@string/txtTitulo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/acompanhamento"
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:text="@string/acompanhamento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="195dp"
        android:layout_height="46dp"
        android:onClick="Comprar"
        android:text="@string/compra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="307dp"
        android:layout_height="50dp"
        android:text="Efetuar pagamento, selecionar acompanhamento e pegar o ingresso no caixa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <RadioGroup
        android:id="@+id/rgPagamento"
        android:layout_width="261dp"
        android:layout_height="104dp"
        android:layout_marginTop="28dp"
        android:checkedButton="@id/radioPag1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPag">

        <RadioButton
            android:id="@+id/radioPag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioPag1" />

        <RadioButton
            android:id="@+id/radioPag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioPag2" />

        <RadioButton
            android:id="@+id/radioPag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioPag3" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>